<resources>
    <string name="app_name">SeeSharp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="button">Button</string>
    <string name="device_id">Device ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bith_date">Bith Date</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In.</string>
    <string name="select_user_type">Select user type</string>
    <string name="connected_account">CONNECTED ACCOUNT</string>
    <string name="add_account">Add account</string>
</resources>