<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ProgressBar
        android:id="@+id/progressBar_signUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEmail_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextPassword_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextConfirmPassword_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextFullName_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <RadioGroup
                android:id="@+id/radioGroupUserType_signUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_user_type" />

                <RadioButton
                    android:id="@+id/radioButtonParent_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parent" />

                <RadioButton
                    android:id="@+id/radioButtonChild_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/child" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonSignUp_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/sign_up" />

            <TextView
                android:id="@+id/textViewSignIn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_sign_in"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>